--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@
     line-height: 70px;
 }
 
+#citySearch{
+    font-style: oblique;
+}
+#leftColumn{
+    background-color: rgba(219, 218, 218, 0.432);
+    padding-right: 10px;
+}
+
+li {
+        margin-left: 5px;
+    padding: 20px;
+    border-style: solid;
+    border-color: rgba(128, 128, 128, 0.308);
+    border-width: thin;
+}
 #card-row {
     display: flex;
     flex-direction: row;
